# file_uploader

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
src/file_uploader/: run_http_api.py
src/file_uploader/http_api/: app.py  controllers.py  deps.py  settings.py
src/file_uploader/services/: __init__.py  download_file.py  upload_file.py
